--- a/supaMenu/package.json
+++ b/supaMenu/package.json
@@ -5,6 +5,7 @@
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
+    "axios": "^1.6.8",
     "expo": "^51.0.0",
     "expo-asset": "~10.0.6",
     "expo-constants": "~16.0.1",
