--- a/supaMenu/package.json
+++ b/supaMenu/package.json
@@ -6,10 +6,10 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.6.8",
-    "expo": "^51.0.0",
+    "expo": "~51.0.8",
     "expo-asset": "~10.0.6",
     "expo-constants": "~16.0.1",
-    "expo-font": "~12.0.4",
+    "expo-font": "~12.0.5",
     "expo-linking": "~6.3.1",
     "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.1",
@@ -18,7 +18,8 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
     "react-native-gesture-handler": "~2.16.1",
-    "react-native-reanimated": "3.10.0",
+    "react-native-heroicons": "^4.0.0",
+    "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-web": "~0.19.6",
